plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.google.services)
}

android {
    namespace 'com.cocode.prepnest'
    compileSdk 36

    defaultConfig {
        applicationId "com.cocode.prepnest"
        minSdk 29
        targetSdk 36
        versionCode 8
        versionName "1.0.4"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material

    implementation platform(libs.firebase.bom)
    implementation libs.firebase.auth
    implementation libs.firebase.database
    implementation libs.firebase.storage
    implementation libs.qrgenerator
    implementation libs.shimmer
    implementation libs.photoview
    implementation libs.core
    implementation libs.glide
    implementation libs.gson
    implementation libs.okhttp
    implementation libs.circleimageview
    implementation libs.firebase.messaging
    implementation libs.startup.runtime
    implementation(name: "simplecropview-1.1.8", ext: "aar")
    implementation libs.firebase.appcheck.playintegrity
    implementation libs.app.update
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.firebase.analytics
    implementation libs.play.services.ads
    implementation libs.spotlight
    implementation libs.legacy.support.v4
    implementation libs.recyclerview
    implementation libs.androidx.recyclerview


    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}